aerospike: Using a more general name in comment

--- a/stable/aerospike/values.yaml
+++ b/stable/aerospike/values.yaml
@@ -20,7 +20,7 @@ persistentVolume: {}
   #         storage: "36G"
   #     selector:
   #       matchLabels:
-  #         diskname: "aerospike-data-backbone"
+  #         diskname: "aerospike-data"
 
 service:
   type: ClusterIP
