--- a/stable/sonarqube/templates/pvc.yaml
+++ b/stable/sonarqube/templates/pvc.yaml
@@ -2,7 +2,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ template "sonarqube.fullname" . }}-conf
+  name: {{ template "sonarqube.fullname" . }}
   labels:
     app: {{ template "sonarqube.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
@@ -13,7 +13,7 @@ spec:
     - {{ .Values.persistence.accessMode | quote }}
   resources:
     requests:
-      storage: {{ .Values.persistence.confVolumeSize | quote }}
+      storage: {{ .Values.persistence.size | quote }}
 {{- if .Values.persistence.storageClass }}
 {{- if (eq "-" .Values.persistence.storageClass) }}
   storageClassName: ""
