add CNAME registries through CoreDNS

--- a/stable/mongodb-replicaset/templates/mongodb-statefulset.yaml
+++ b/stable/mongodb-replicaset/templates/mongodb-statefulset.yaml
@@ -68,7 +68,8 @@ spec:
           args:
             - -on-start=/work-dir/on-start.sh
             {{- if .Values.podServices.enabled }}
-            - "-selector=app={{ template "name" . }},release={{ .Release.Name }}"
+            - "-selector=app={{ template "name" . }},release={{ .Release.Name }},name"
+            - "-coredns-configmap={{ template "fullname" . }}-dns"
             {{- else }}
             - "-service={{ template "fullname" . }}"
             {{- end }}
@@ -107,7 +108,6 @@ spec:
               mountPath: /keydir
               readOnly: true
           {{- end }}
-
 
       containers:
         - name: {{ template "name" . }}
