aerospike: we need to separate mesh service from client service. Mesh service needs to be headless so aersopike cluster nodes can find each others by name

--- a/stable/aerospike/templates/statefulset.yaml
+++ b/stable/aerospike/templates/statefulset.yaml
@@ -8,7 +8,7 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
-  serviceName: {{ template "fullname" . }}
+  serviceName: {{ template "fullname" . }}-mesh
   replicas: {{ .Values.replicaCount }}
   template:
     metadata:
