--- a/stable/aerospike/values.yaml
+++ b/stable/aerospike/values.yaml
@@ -28,6 +28,9 @@ service:
   loadBalancerIP:
   clusterIP: None
 
+meshService:
+  annotations: {}
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
