--- a/incubator/elasticsearch/templates/data-statefulset.yaml
+++ b/incubator/elasticsearch/templates/data-statefulset.yaml
@@ -120,10 +120,10 @@ spec:
       - name: config
         configMap:
           name: {{ template "elasticsearch.fullname" . }}
-{{- if not .Values.data.persistence.enabled }}
+  {{- if not .Values.data.persistence.enabled }}
       - name: data
         emptyDir: {}
-{{- else }}
+  {{- else }}
   volumeClaimTemplates:
   - metadata:
       name: data
@@ -138,5 +138,5 @@ spec:
     {{- end }}
       resources:
         requests:
-          storage: "{{ .Values.data.persistence.storage }}"
-{{- end }}
+          storage: "{{ .Values.data.persistence.size }}"
+  {{- end }}
