* Added standard Helm labels to test resources * Removed aliasing from `requirements.yaml` * Reformatted tables in `README.md` * Updates throughout:   * Current version of Weave Scope (1.6.5)   * Current version of upstream manifest (added a debug volume/mount to the agent)

--- a/stable/weave-scope/charts/weave-scope-agent/templates/daemonset.yaml
+++ b/stable/weave-scope/charts/weave-scope-agent/templates/daemonset.yaml
@@ -59,6 +59,8 @@ spec:
               mountPath: /var/run/docker.sock
             - name: scope-plugins
               mountPath: /var/run/scope/plugins
+            - name: sys-kernel-debug
+              mountPath: /sys/kernel/debug
       volumes:
         - name: docker-socket
           hostPath:
@@ -66,6 +68,10 @@ spec:
         - name: scope-plugins
           hostPath:
             path: /var/run/scope/plugins
+        - name: sys-kernel-debug
+          hostPath:
+            path: /sys/kernel/debug
+
       hostPID: true
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
