--- a/stable/weave-scope/charts/weave-scope-frontend/Chart.yaml
+++ b/stable/weave-scope/charts/weave-scope-frontend/Chart.yaml
@@ -1,6 +1,7 @@
 description: A Helm chart for the Weave Scope cluster visualizer frontend.
 name: weave-scope-frontend
 version: 0.9.0
+appVersion: 1.6.5
 keywords:
   - containers
   - dashboard
