--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -27,6 +27,7 @@ acme:
   enabled: false
   email: admin@example.com
   staging: true
+  logging: false
   ## Save ACME certs to a persistent volume. WARNING: If you do not do this, you will re-request
   ## certs every time a pod (re-)starts and you WILL be rate limited!
   persistence:
