--- a/stable/wordpress/requirements.yaml
+++ b/stable/wordpress/requirements.yaml
@@ -1,4 +1,7 @@
 dependencies:
 - name: mariadb
-  version: 0.7.0
+  version: 2.0.1
   repository: https://kubernetes-charts.storage.googleapis.com/
+  condition: deployMariadb
+  tags:
+    - wordpress-database
