aerospike: adding mess port to general service. This way a setup can use of internal balancers to expose nodes when cluster is a collection of separate installtions (helm requirements alias)

--- a/stable/aerospike/templates/service.yaml
+++ b/stable/aerospike/templates/service.yaml
@@ -25,6 +25,9 @@ spec:
     - port: 3000
       protocol: TCP
       name: aerospike-client
+    - port: 3002
+      protocol: TCP
+      name: aerospike-mesh
   selector:
     app: {{ template "name" . }}
     release: {{ .Release.Name }}
