Fixed kubernetes-dashboard configuring with no-hostname defined

--- a/stable/kubernetes-dashboard/templates/ingress.yaml
+++ b/stable/kubernetes-dashboard/templates/ingress.yaml
@@ -16,6 +16,7 @@ metadata:
   name: {{ template "kubernetes-dashboard.fullname" . }}
 spec:
   rules:
+  {{- if .Values.ingress.hosts }}
   {{- range .Values.ingress.hosts }}
     - host: {{ . }}
       http:
@@ -24,6 +25,14 @@ spec:
             backend:
               serviceName: {{ $fullName }}
               servicePort: {{ $httpPort }}
+  {{- end -}}
+  {{- else }}
+  - http:
+      paths:
+        - path: /
+          backend:
+            serviceName: {{ $fullName }}
+            servicePort: {{ $httpPort }}
   {{- end -}}
   {{- if .Values.ingress.tls }}
   tls:
