--- a/incubator/drone/templates/deployment-server.yaml
+++ b/incubator/drone/templates/deployment-server.yaml
@@ -1,9 +1,10 @@
+{{- if hasKey .Values.server.env "DRONE_PROVIDER" }}
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ template "fullname" . }}-server
+  name: {{ template "drone.fullname" . }}-server
   labels:
-    app: {{ template "fullname" . }}-server
+    app: {{ template "drone.fullname" . }}-server
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -12,31 +13,39 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ template "fullname" . }}-server
+        app: {{ template "drone.fullname" . }}-server
         chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
         release: "{{ .Release.Name }}"
         heritage: "{{ .Release.Service }}"
     spec:
       containers:
-      - name: {{ template "fullname" . }}-server
-        image: "{{ .Values.image.registry }}/{{ .Values.image.org }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
+      - name: {{ template "drone.fullname" . }}-server
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
           - name: DRONE_SECRET
             valueFrom:
               secretKeyRef:
-                name: {{ template "fullname" . }}
+                name: {{ template "drone.fullname" . }}
                 key: secret
+          - name: DRONE_HOST
+          {{- if hasKey .Values.server "host" }}
+            value: {{ .Values.server.host }}
+          {{- else }}
+            value: {{ template "drone.fullname" . }}
+          {{- end }}
           {{ range $key, $value := .Values.server.env }}
           - name: {{ $key }}
             value: {{ $value | quote }}
           {{ end }}
         ports:
         - name: http
-          containerPort: {{ .Values.service.http.internalPort }}
-        readinessProbe:
+          containerPort: 8000
+          protocol: TCP
+        livenessProbe:
           httpGet:
             path: /
             port: http
         resources:
 {{ toYaml .Values.server.resources | indent 10 }}
+{{ end }}
