--- a/incubator/drone/templates/secrets.yaml
+++ b/incubator/drone/templates/secrets.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "drone.fullname" . }}
   labels:
-    app: {{ template "fullname" . }}
+    app: {{ template "drone.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
