--- a/incubator/drone/templates/service.yaml
+++ b/incubator/drone/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "drone.fullname" . }}
   labels:
-    app: {{ template "fullname" . }}
+    app: {{ template "drone.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -11,7 +11,11 @@ spec:
   type: {{ .Values.service.type }}
   ports:
   - name: http
-    port: {{ .Values.service.http.externalPort }}
-    targetPort: {{ .Values.service.http.internalPort }}
+    port: {{ .Values.service.httpPort }}
+    targetPort: 8000
+{{- if hasKey .Values.service "nodePort" }}
+    nodePort: {{ .Values.service.nodePort }}
+{{- end }}
   selector:
-    app: {{ template "fullname" . }}-server
+    app: {{ template "drone.fullname" . }}-server
+    release: {{ .Release.Name | quote }}
