--- a/stable/spinnaker/values.yaml
+++ b/stable/spinnaker/values.yaml
@@ -36,14 +36,14 @@ slack:
 
 # Images for each component
 images:
-  clouddriver: gcr.io/spinnaker-marketplace/clouddriver:0.5.0-72
-  echo: gcr.io/spinnaker-marketplace/echo:0.4.0-72
-  deck: gcr.io/spinnaker-marketplace/deck:1.3.0-72
-  igor: gcr.io/spinnaker-marketplace/igor:0.4.0-72
-  orca: gcr.io/spinnaker-marketplace/orca:0.5.0-72
-  gate: gcr.io/spinnaker-marketplace/gate:0.5.0-72
-  front50: gcr.io/spinnaker-marketplace/front50:0.4.1-72
-  rosco: gcr.io/spinnaker-marketplace/rosco:0.4.0-72
+  clouddriver: gcr.io/spinnaker-marketplace/clouddriver:0.7.1-20170918142556
+  echo: gcr.io/spinnaker-marketplace/echo:0.5.0-20170918142556
+  deck: gcr.io/spinnaker-marketplace/deck:1.5.0-20170918142556
+  igor: gcr.io/spinnaker-marketplace/igor:0.6.0-20170918142556
+  orca: gcr.io/spinnaker-marketplace/orca:0.7.0-20170918142556
+  gate: gcr.io/spinnaker-marketplace/gate:0.7.1-20170918142556
+  front50: gcr.io/spinnaker-marketplace/front50:0.6.0-20170918142556
+  rosco: gcr.io/spinnaker-marketplace/rosco:0.4.2-20170918142556
 
 # Change this if youd like to expose Spinnaker outside the cluster
 deck:
