--- a/stable/weave-scope/charts/weave-scope-agent/templates/serviceaccount.yaml
+++ b/stable/weave-scope/charts/weave-scope-agent/templates/serviceaccount.yaml
@@ -1,9 +1,13 @@
+{{- if .Values.rbac }}
+{{- if .Values.rbac.serviceAccountName }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
     {{- include "weave-scope.helm_std_labels" . | indent 4 }}
     component: agent
-  name: {{ .Values.serviceAccountName }}
+  name: {{ .Values.rbac.serviceAccountName }}
   annotations:
     {{- include "weave-scope.annotations" . | indent 4 }}
+{{- end }}
+{{- end }}
