Fixed breaking changes introduced with drone 0.8
- Added protocol to server.host example
- Configured GRPC and removed WebSockets for agent <-> server communication

--- a/incubator/drone/templates/deployment-agent.yaml
+++ b/incubator/drone/templates/deployment-agent.yaml
@@ -23,7 +23,7 @@ spec:
         imagePullPolicy: {{ .Values.agentImage.pullPolicy }}
         env:
           - name: DRONE_SERVER
-            value: ws://{{ template "drone.fullname" . }}/ws/broker
+            value: {{ template "drone.fullname" . }}:9000
           - name: DRONE_SECRET
             valueFrom:
               secretKeyRef:
