--- a/incubator/drone/templates/deployment-server.yaml
+++ b/incubator/drone/templates/deployment-server.yaml
@@ -42,6 +42,9 @@ spec:
         - name: http
           containerPort: 8000
           protocol: TCP
+        - name: grpc
+          containerPort: 9000
+          protocol: TCP
         livenessProbe:
           httpGet:
             path: /
