[stable/datadog] Fix volumes/volumeMounts typo in example values
The chart looks for values named `volumes` and `volumeMounts`.

--- a/stable/datadog/values.yaml
+++ b/stable/datadog/values.yaml
@@ -97,11 +97,11 @@ datadog:
   ## or deployment.
   ## ref: https://docs.datadoghq.com/guides/process/
   ##
-  # volume:
+  # volumes:
   #  - hostPath:
   #      path: /etc/passwd
   #    name: passwd
-  # volumeMount:
+  # volumeMounts:
   #   - name: passwd
   #     mountPath: /etc/passwd
   #     readOnly: true
