--- a/stable/jenkins/values.yaml
+++ b/stable/jenkins/values.yaml
@@ -26,7 +26,6 @@ Master:
   ServiceAnnotations: {}
     #   service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
 # Used to create Ingress record (should used with ServiceType: ClusterIP)
-# HostName: jenkins.cluster.local
 # NodePort: <to set explicitly, choose port between 30000-32767
   ContainerPort: 8080
   SlaveListenerPort: 50000
@@ -67,7 +66,9 @@ Master:
     Annotations:
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
-
+    Hosts:
+      # - name: "jenkins.cluster.local"
+      #   paths: []
     TLS:
       # - secretName: jenkins.cluster.local
       #   hosts:
