--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -1,6 +1,7 @@
 ## Default values for Traefik
 image: traefik
 imageTag: 1.4.1
+## can switch the service type to NodePort if required
 serviceType: LoadBalancer
 loadBalancerIP:
 # loadBalancerSourceRanges: []
@@ -58,6 +59,17 @@ service:
   #   key: value
   # labels:
   #   key: value
+  ## Further config for service of type NodePort
+  ## Default config with empty string "" will assign a dynamic
+  ## nodePort to http and https ports
+  nodePorts:
+    http: ""
+    https: ""
+  ## If static nodePort configuration is required it can be enabled as below
+  ## Configure ports in allowable range (eg. 30000 - 32767 on minikube)
+  # nodePorts:
+  #   http: 30080
+  #   https: 30443
 gzip:
   enabled: true
 accessLogs:
