[stable/jenkins] Fix edge case configs

--- a/stable/jenkins/templates/jenkins-master-ingress.yaml
+++ b/stable/jenkins/templates/jenkins-master-ingress.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.Master.Ingress.Hosts }}
 {{- $serviceName := include "jenkins.fullname" . }}
-{{- $servicePort := .Values.Master.ServicePort -}}
+{{- $servicePort := .Values.Master.ServicePort }}
 apiVersion: {{ .Values.NetworkPolicy.ApiVersion }}
 kind: Ingress
 metadata:
@@ -17,21 +17,27 @@ spec:
       paths:
       {{- if .paths }}
         {{- range .paths }}
+          {{- if .backend }}
       - backend:
           serviceName: {{ .backend.serviceName | default $serviceName | quote }}
           servicePort: {{ .backend.servicePort | default $servicePort }}
+          {{- else }}
+      - backend:
+          serviceName: {{ $serviceName | quote }}
+          servicePort: {{ $servicePort }}
+          {{- end }}
           {{- if .path }}
         path: {{ .path | quote }}
-          {{- end -}}
-        {{- end -}}
+          {{- end }}
+        {{- end }}
       {{- else }}
       - backend:
           serviceName: {{ $serviceName | quote }}
           servicePort: {{ $servicePort }}
-      {{- end -}}
-  {{- end -}}
+      {{- end }}
+  {{- end }}
 {{- if .Values.Master.Ingress.TLS }}
   tls:
 {{ toYaml .Values.Master.Ingress.TLS | indent 4 }}
-{{- end -}}
+{{- end }}
 {{- end }}
