--- a/incubator/kafka/requirements.yaml
+++ b/incubator/kafka/requirements.yaml
@@ -2,3 +2,4 @@ dependencies:
 - name: zookeeper
   version: 0.3.1
   repository: https://kubernetes-charts-incubator.storage.googleapis.com/
+  condition: zookeeper.Enabled
