--- a/stable/mongodb-replicaset/templates/coredns-deployment.yaml
+++ b/stable/mongodb-replicaset/templates/coredns-deployment.yaml
@@ -3,35 +3,28 @@ kind: Deployment
 metadata:
   name: {{ template "fullname" . }}-dns
   labels:
-    heritage: {{ .Release.Service | quote }}
-    release: {{ .Release.Name | quote }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    k8s-app: {{ .Chart.Name | quote }}
-    kubernetes.io/cluster-service: "true"
-    kubernetes.io/name: "CoreDNS"
+    app: {{ template "name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
+    layer: "dns"
 spec:
   replicas: 1
   selector:
     matchLabels:
-      k8s-app: {{ .Chart.Name | quote }}
+      app: {{ .Chart.Name | quote }}
+      release: {{ .Release.Name }}
+      layer: "dns"
   template:
     metadata:
       labels:
-        k8s-app: {{ .Chart.Name | quote }}
+        app: {{ .Chart.Name | quote }}
         release: {{ .Release.Name | quote }}
+        layer: "dns"
       annotations:
         scheduler.alpha.kubernetes.io/critical-pod: ''
         scheduler.alpha.kubernetes.io/tolerations: '[{"key":"CriticalAddonsOnly", "operator":"Exists"}]'
     spec:
-      initContainers:
-      - name: install
-        image: "{{ .Values.installImage.name }}:{{ .Values.installImage.tag }}"
-        command: ["/bin/bash", "-c", "cat /etc/coredns/Corefile"]
-        imagePullPolicy: "{{ .Values.installImage.pullPolicy }}"
-        volumeMounts:
-        - name: config-volume
-          mountPath: /etc/coredns
-
       containers:
       - name: "coredns"
         image: "{{ .Values.coreDNSImage.repository }}:{{ .Values.coreDNSImage.tag }}"
@@ -43,6 +36,9 @@ spec:
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         ports:
+        - containerPort: 53
+          name: dns-udp
+          protocol: UDP
         - containerPort: 53
           name: dns-tcp
           protocol: TCP
