--- a/stable/traefik/templates/default-cert-secret.yaml
+++ b/stable/traefik/templates/default-cert-secret.yaml
@@ -12,4 +12,8 @@ type: Opaque
 data:
   tls.crt: {{ .Values.ssl.defaultCert }}
   tls.key: {{ .Values.ssl.defaultKey }}
+  {{- range $name, $element := .Values.ssl.certificates }}
+  {{$name}}.crt: {{$element.cert}}
+  {{$name}}.key: {{$element.key}}
+  {{- end}}
 {{- end }}
