Converted the storage class template to accept any amount of storage pramas dynamically

--- a/stable/ibex-dashboard/templates/storageclass.yaml
+++ b/stable/ibex-dashboard/templates/storageclass.yaml
@@ -5,6 +5,7 @@ metadata:
  name: "{{ .Values.persistence.storageClass }}"
 provisioner: {{ .Values.persistence.storage.provisioner }}
 parameters:
- skuName: {{ .Values.persistence.storage.parameters.skuName }}
- location: {{ .Values.persistence.storage.parameters.location }}
+  {{- range $key, $value := .Values.persistence.storage.parameters }}
+    {{ $key }}: {{ $value }}
+  {{- end }}
  {{- end -}}
