--- a/stable/ibex-dashboard/values.yaml
+++ b/stable/ibex-dashboard/values.yaml
@@ -44,6 +44,7 @@ persistence:
   size: 8Gi
   claimName: myclaim
   storage:
+    enabled: true
     provisioner: kubernetes.io/azure-disk
     parameters:
       skuName: Standard_LRS
