--- a/incubator/elasticsearch/values.yaml
+++ b/incubator/elasticsearch/values.yaml
@@ -35,8 +35,11 @@ master:
   name: master
   replicas: 3
   heapSize: "512m"
-  storage: "4Gi"
-  # storageClass: "ssd"
+  persistence:
+    enabled: true
+    accessMode: ReadWriteOnce
+    size: "4Gi"
+    # storageClass: "ssd"
   antiAffinity: "soft"
   resources:
     limits:
@@ -50,8 +53,11 @@ data:
   name: data
   replicas: 2
   heapSize: "1536m"
-  storage: "30Gi"
-  # storageClass: "ssd"
+  persistence:
+    enabled: true
+    accessMode: ReadWriteOnce
+    size: "30Gi"
+    # storageClass: "ssd"
   terminationGracePeriodSeconds: 3600
   antiAffinity: "soft"
   resources:
