[stable/coredns] Add RBAC support (#2087)
* [stable/coredns] Add RBAC support

This is needed in case of kubernetes' middleware being used.

Access rules are based on:
https://raw.githubusercontent.com/coredns/deployment/master/kubernetes/coredns-1.6.yaml.sed

* Change implementation based on charts' best practices

* Apply @unguiculus's requested changes

* Disable RBAC create by default

--- a/stable/coredns/templates/deployment.yaml
+++ b/stable/coredns/templates/deployment.yaml
@@ -37,6 +37,9 @@ spec:
         scheduler.alpha.kubernetes.io/tolerations: '[{"key":"CriticalAddonsOnly", "operator":"Exists"}]'
         {{- end }}
     spec:
+      {{- if .Values.middleware.kubernetes.enabled }}
+      serviceAccountName: {{ if .Values.rbac.create }}{{ template "coredns.fullname" . }}{{ else }}"{{ .Values.rbac.serviceAccountName }}"{{ end }}
+      {{- end }}
       {{- if .Values.isClusterService }}
       dnsPolicy: Default
       {{- end }}
