--- a/stable/coredns/values.yaml
+++ b/stable/coredns/values.yaml
@@ -17,6 +17,12 @@ resources:
     cpu: 100m
     memory: 128Mi
 
+rbac:
+  # If true, create & use RBAC resources
+  create: false
+  # Ignored if rbac.create is true
+  serviceAccountName: default
+
 # isClusterService specifies whether chart should be deployed as cluster-service or normal k8s app.
 isClusterService: true
 
