Add podAnnotations value
This creates the podAnnotation value for the client, master and data
templates. This will enable downstream charts to add annotations to Pods
created by this chart.

--- a/incubator/elasticsearch/templates/client-deployment.yaml
+++ b/incubator/elasticsearch/templates/client-deployment.yaml
@@ -16,6 +16,10 @@ spec:
         app: {{ template "elasticsearch.name" . }}
         component: "{{ .Values.client.name }}"
         release: {{ .Release.Name }}
+        {{- if .Values.client.podAnnotations }}
+      annotations:
+{{ toYaml .Values.client.podAnnotations | indent 8 }}
+        {{- end }}
     spec:
       serviceAccountName: {{ template "elasticsearch.fullname" . }}
       {{- if eq .Values.client.antiAffinity "hard" }}
