--- a/incubator/elasticsearch/templates/data-statefulset.yaml
+++ b/incubator/elasticsearch/templates/data-statefulset.yaml
@@ -17,6 +17,10 @@ spec:
         app: {{ template "elasticsearch.name" . }}
         component: "{{ .Values.data.name }}"
         release: {{ .Release.Name }}
+        {{- if .Values.data.podAnnotations }}
+      annotations:
+{{ toYaml .Values.data.podAnnotations | indent 8 }}
+        {{- end }}
     spec:
       serviceAccountName: {{ template "elasticsearch.fullname" . }}
       {{- if eq .Values.data.antiAffinity "hard" }}
