--- a/incubator/elasticsearch/values.yaml
+++ b/incubator/elasticsearch/values.yaml
@@ -31,6 +31,10 @@ client:
       cpu: "25m"
       memory: "512Mi"
 
+  ## (dict) If specified, apply these annotations to each client Pod
+  # podAnnotations:
+  #   example: client-foo
+
 master:
   name: master
   replicas: 3
@@ -48,6 +52,10 @@ master:
     requests:
       cpu: "25m"
       memory: "512Mi"
+
+  ## (dict) If specified, apply these annotations to each master Pod
+  # podAnnotations:
+  #   example: master-foo
 
 data:
   name: data
@@ -67,6 +75,10 @@ data:
     requests:
       cpu: "25m"
       memory: "1536Mi"
+
+  ## (dict) If specified, apply these annotations to each data Pod
+  # podAnnotations:
+  #   example: data-foo
 
 ## Install Default RBAC roles and bindings
 rbac:
