[stable/redis] podAnnotations value
podAnnotations value to be used to annotate pods in the redis Deployment
in downstream charts.

--- a/stable/redis/values.yaml
+++ b/stable/redis/values.yaml
@@ -79,6 +79,9 @@ tolerations: []
 ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
 podLabels: {}
 
+## annotations for redis pods
+podAnnotations: {}
+
 networkPolicy:
   ## Enable creation of NetworkPolicy resources.
   ##
