Probes should use exposed container port values.
Oops. I got too cute using .Values here and was using the service
values. The liveness and readiness probes must be pointed at exposed
container ports.

Port 5555 is exposed in the image via `EXPOSE 5555`, but I have also
explicitly exposed it via a containers.ports.containerPort entry.

--- a/incubator/riemann/templates/deployment.yaml
+++ b/incubator/riemann/templates/deployment.yaml
@@ -22,16 +22,19 @@ spec:
         {{- if .Values.service.ports.tcp.internal }}
         livenessProbe:
           tcpSocket:
-            port: {{ .Values.service.ports.tcp.internal }}
+            port: 5555
           initialDelaySeconds: 10
         readinessProbe:
           tcpSocket:
-            port: {{ .Values.service.ports.tcp.internal }}
+            port: 5555
           initialDelaySeconds: 5
         {{- end }}
         volumeMounts:
         - name: "{{ .Release.Name }}-config"
           mountPath: /usr/local/etc/riemann
+        ports:
+        - name: riemann-tcp
+          containerPort: 5555
       volumes:
       - name: "{{ .Release.Name }}-config"
         configMap:
