--- a/incubator/riemann/templates/deployment.yaml
+++ b/incubator/riemann/templates/deployment.yaml
@@ -38,5 +38,5 @@ spec:
       volumes:
       - name: "{{ .Release.Name }}-config"
         configMap:
-          name: "{{ .Release.Name }}-configmap" 
+          name: {{ template "riemann.fullname" . }}
 
