Separate the image and tag values

--- a/incubator/riemann/templates/deployment.yaml
+++ b/incubator/riemann/templates/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: {{ .Chart.Name }}
-        image: "{{ .Values.image.repository }}"
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: "{{ .Values.image.pullPolicy }}"
         {{- if .Values.service.ports.tcp.internal }}
         livenessProbe:
