--- a/incubator/gocd/templates/gocd-server-deployment.yaml
+++ b/incubator/gocd/templates/gocd-server-deployment.yaml
@@ -1,18 +1,24 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ .Chart.Name }}-server-deployment
+  name: {{ template "gocd.name" . }}-server-deployment
   labels:
-    app: {{ .Chart.Name }}-server
+    app: {{ template "gocd.name" . }}-server
+    chart: "{{ template "gocd.name" . }}-{{ .Chart.Version }}"
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
     role: server
 spec:
   {{- if le .Values.server.replicaCount 1.0 }}
   replicas: {{ .Values.server.replicaCount }}
   {{- end }}
+  selector:
+    matchLabels:
+      app: {{ template "gocd.name" . }}-server
   template:
     metadata:
       labels:
-        app: {{ .Chart.Name }}-server
+        app: {{ template "gocd.name" . }}-server
         role: server
     spec:
       {{- if .Values.server.persistence.enabled }}
@@ -25,7 +31,7 @@ spec:
             claimName: {{ .Values.server.persistence.homego.name }}
       {{- end }}
       containers:
-        - name: {{ .Chart.Name }}-server
+        - name: {{ template "gocd.name" . }}-server
           {{- if .Values.server.image.tag }}
           image: "{{ .Values.server.image.repository }}:{{ .Values.server.image.tag }}"
           {{- else }}
