--- a/incubator/gocd/templates/gocd-server-homego-pvc.yaml
+++ b/incubator/gocd/templates/gocd-server-homego-pvc.yaml
@@ -4,7 +4,10 @@ apiVersion: v1
 metadata:
   name: {{ .Values.server.persistence.homego.name }}
   labels:
-    app: {{ .Chart.Name }}-server
+    app: {{ template "gocd.name" . }}-server
+    chart: "{{ template "gocd.name" . }}-{{ .Chart.Version }}"
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
     role: server
 spec:
   accessModes:
