--- a/incubator/gocd/templates/service.yaml
+++ b/incubator/gocd/templates/service.yaml
@@ -1,9 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Chart.Name }}-server-service
+  name: {{ template "gocd.name" . }}-server-service
   labels:
-    app: {{ .Chart.Name }}-server
+    app: {{ template "gocd.name" . }}-server
+    chart: "{{ template "gocd.name" . }}-{{ .Chart.Version }}"
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
     role: server
 spec:
   type: {{ .Values.server.service.type }}
@@ -24,5 +27,5 @@ spec:
       protocol: TCP
       name: https
   selector:
-    app: {{ .Chart.Name }}-server
+    app: {{ template "gocd.name" . }}-server
     role: server
