--- a/incubator/gocd/values.yaml
+++ b/incubator/gocd/values.yaml
@@ -2,109 +2,142 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 app:
+  # app.version is the version of GoCD app
   version:
 
 server:
+  # server.replicaCount is the GoCD Server replicas Count
   replicaCount: 1
   image:
-    repository: gocd/gocd-server
+    # server.image.repository is the GoCD Server image name
+    repository: "gocd/gocd-server"
+    # server.image.tag is the GoCD Server image's tag
     tag:
-    pullPolicy: IfNotPresent
-  # resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #  cpu: 100m
-  #  memory: 128Mi
-  # requests:
-  #  cpu: 100m
-  #  memory: 128Mi
+    # server.image.pullPolicy is the GoCD Server image's pull policy
+    pullPolicy: "IfNotPresent"
 
-  # nodeSelector: {}
-  # This is used to select which node to run the particular pod on. Remove the curly braces and adjust the node selector as necessary. This will select the node which matches the labels provided in the nodeSelector.
+  ## Configure GoCD server resource requests and limits
+  ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
+  ##
+  resources: {}
+  #   requests:
+  #     memory: 512Mi
+  #     cpu: 300m
+  #   limits:
+  #     cpu: 100m
+  #     memory: 128Mi
+
+  ## Additional GoCD server pod labels
+  ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
+  nodeSelector: {}
 
   healthCheck:
+    # server.healthCheck.initialDelaySeconds is the initial delays in seconds to start the health checks
     initialDelaySeconds: 180
+    # server.healthCheck.periodSeconds is the health check interval duration
     periodSeconds: 5
   env:
+    # server.env.goServerSystemProperties is the GoCD Server system properties
     goServerSystemProperties:
   service:
-    type: NodePort
+    # server.service.type is the GoCD Server service type
+    type: "NodePort"
+    # server.service.httpPort is the GoCD Server HTTP port
     httpPort: 8153
+    # server.service.httpPort is the GoCD Server HTTPS port
     httpsPort: 8154
-  # Provide the nodeHttpPort and nodeHttpsPort if you want the service to be exposed on specific ports. Without this, random node ports will be assigned.
+    # Provide the nodeHttpPort and nodeHttpsPort if you want the service to be exposed on specific ports. Without this, random node ports will be assigned.
+    # server.service.nodeHttpPort is the GoCD Server Service Node HTTP port
     nodeHttpPort:
+    # server.service.nodeHttpPort is the GoCD Server Service Node HTTPS port
     nodeHttpsPort:
   ingress:
+    # server.ingress.enabled is the toggle to enable GoCD Server Ingress
     enabled: false
-  # Used to create an Ingress record.
+    # server.ingress.hosts is used to create an Ingress record.
   #  hosts:
   #    - foo.go.cd
-    # annotations:
-    #     # kubernetes.io/ingress.class: nginx
-    #     # kubernetes.io/tls-acme: "true"
-    # tls:
+
   persistence:
-    # change to true if a persistent volume is available and configured manually.
+    # server.persistence.enabled is the toggle for sever volume persistence. Change to true if a persistent volume is available and configured manually.
     enabled: false
+    # server.persistence.godata is the GoCD server `/godata` volume configuration
     godata:
-      pvName: godata-gocd-server
+      pvName: "godata-gocd-server"
       name: "godata-pvc"
-      accessMode: ReadWriteOnce
+      accessMode: "ReadWriteOnce"
       size: 1Gi
       storageClass:
       ExistingClaim:
+    # server.persistence.homego is the GoCD server `/home/go` volume configuration
     homego:
-      pvName: homego-gocd-server
+      pvName: "homego-gocd-server"
       name: "homego-pvc"
-      accessMode: ReadWriteOnce
+      accessMode: "ReadWriteOnce"
       size: 1Gi
       storageClass:
       ExistingClaim:
 
 agent:
+  # agent.replicaCount is the GoCD Agent replicas Count. Specify the number of GoCD agents to run
   replicaCount: 1
   image:
-    repository: gocd/gocd-agent-alpine-3.6
+    # agent.image.repository is the GoCD Agent image name
+    repository: "gocd/gocd-agent-alpine-3.6"
+    # agent.image.tag is the GoCD Agent image's tag
     tag:
-    pullPolicy: IfNotPresent
+    # agent.image.pullPolicy is the GoCD Agent image's pull policy
+    pullPolicy: "IfNotPresent"
   env:
+    # agent.env.goServerUrl is the GoCD Server Url
     goServerUrl:
+    # agent.env.agentAutoRegisterKey is the GoCD Agent auto-register key
     agentAutoRegisterKey:
+    # agent.env.agentAutoRegisterResources is the GoCD Agent auto-register resources
     agentAutoRegisterResources:
+    # agent.env.agentAutoRegisterEnvironments is the GoCD Agent auto-register Environments
     agentAutoRegisterEnvironemnts:
+    # agent.env.agentAutoRegisterHostname is the GoCD Agent auto-register hostname
     agentAutoRegisterHostname:
+    # agent.env.goAgentSystemProperties is the GoCD Agent system properties
     goAgentSystemProperties:
+    # agent.env.goAgentBootstrapperArgs is the GoCD Agent bootstrapper args
     goAgentBootstrapperArgs:
+    # agent.env.goAgentBootstrapperJvmArgs is the GoCD Agent bootstrapper JVM args
     goAgentBootstrapperJvmArgs:
   persistence:
+    # agent.persistence.enabled is the toggle for agent volume persistence. Change to true if a persistent volume is available and configured manually.
     enabled: false
+     # server.persistence.homego is the GoCD agent `/home/go` volume configuration
     homego:
-      pvName: gocd-agent
+      pvName: "gocd-agent"
       name: "homego-agent-pvc"
-      accessMode: ReadWriteOnce
+      accessMode: "ReadWriteOnce"
       size: 1Gi
       storageClass:
       ExistingClaim:
 
   healthCheck:
+   # agent.healthCheck.enable is the toggle for GoCD agent health checks
     enabled: false
+    # agent.healthCheck.initialDelaySeconds is the initial delays in seconds to start the health checks
     initialDelaySeconds: 180
+    # agent.healthCheck.periodSeconds is the health check interval duration
     periodSeconds: 60
+    # agent.healthCheck.failureThreshold is the health check failure threshold of GoCD agent
     failureThreshold: 60
 
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #  cpu: 100m
-  #  memory: 128Mi
-  # requests:
-  #  cpu: 100m
-  #  memory: 128Mi
+  ## Configure GoCD agent resource requests and limits
+  ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
+  ##
+  resources: {}
+  #   requests:
+  #     memory: 512Mi
+  #     cpu: 300m
+  #   limits:
+  #     cpu: 100m
+  #     memory: 128Mi
 
-  # nodeSelector: {}
-  # This is used to select which node to run the particular pod on. Remove the curly braces and adjust the node selector as necessary. This will select the node which matches the labels provided in the nodeSelector.
+  ## Additional GoCD agent pod labels
+  ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
+  nodeSelector: {}
