[stable/prometheus] Add RollingUpdate for Prometheus node-exporter ds (#1861)
* [stable/prometheus] Add RollingUpdate for Prometheus node-exporter daemonset

By default updateStrategy is `OnDelete` which needs manual deletion of all daemonsets for change to take affect

* Add review suggestions

* Keep default updateStrategy

--- a/stable/prometheus/templates/node-exporter-daemonset.yaml
+++ b/stable/prometheus/templates/node-exporter-daemonset.yaml
@@ -10,6 +10,10 @@ metadata:
     release: {{ .Release.Name }}
   name: {{ template "prometheus.nodeExporter.fullname" . }}
 spec:
+  {{- if .Values.nodeExporter.updateStrategy }}
+  updateStrategy:
+{{ toYaml .Values.nodeExporter.updateStrategy | indent 4 }}
+  {{- end }}
   template:
     metadata:
     {{- if .Values.nodeExporter.podAnnotations }}
